--- a/sarkar.css
+++ b/sarkar.css
@@ -2,6 +2,9 @@
     margin: 0px;
     padding: 0px;
 }
+body{
+    background-image: url(mesh.png);
+}
 .head{
     height: 69px;
     width: 100%;
@@ -15,7 +18,7 @@
 }
 
 .title{
-    margin: 20px 186px;
+    margin: 24px 105px;
     color: white;
     font-size: 30px;
 }
@@ -53,59 +56,8 @@ li{
         color: white;
         background-color: black;
     }
-    *{
-        box-sizing: border-box;
-    }
-    header{
-        border: 2px solid red;
-        margin: auto;
-        width: 1200px;
-    }
-    img{
-        margin: auto;
-        width: 34px;
-    display: block;
-
-    }
-    h3{
-        text-align: center;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin: 0px;
-    }
-    .box{
-        border: 1px solid black;
-        background-color: chartreuse;
-        margin: 4px;
-        padding: 20px;
-        width: 30%;
-        box-sizing: border-box;
-        display: inline-block;
-
-        
-    }
-    .container{
-        margin: auto;
-        width: 1200px;
-    }
-    .con1{
-    border: 2px solid black;
-    height: 300px;
-
-    }
-    .box1{
-        display: inline-block;
-        border: 1px solid red;
-        width: 20%;
-        height: 150px;
-        margin: 3px;
     
-        background-color: seagreen;
-        z-index: -1;
-        transition: width 2s height 2s;
 
-    }
-    .box1:hover{
-        width: 30%;
-        height: 200px;
-    }
+   
+    
    
